Frankbelford/uatv1ba/force-app/main/default/objects/Account/fields/ts2__Accounts_Payable__c.field-meta.xml
<CustomField>
    <fullName>ts2__Accounts_Payable__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Accounts Payable</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contacts (Accounts Payable)</relationshipLabel>
    <relationshipName>Companies</relationshipName>
    <type>Lookup</type>
</CustomField>