Frankbelford/uatv1ba/force-app/main/default/objects/Account/fields/ts2__Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>ts2__Business_Unit__c</fullName>
    <label>Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Information Technology</fullName>
            </value>
            <value>
                <fullName>Finance and Accounting</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>