Frankbelford/uatv1ba/force-app/main/default/objects/Account/fields/ts2__Close_Pct__c.field-meta.xml
<CustomField>
    <fullName>ts2__Close_Pct__c</fullName>
    <label>Close Pct</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>