Frankbelford/uatv1ba/force-app/main/default/objects/Account/fields/ts2__Company_Status__c.field-meta.xml
<CustomField>
    <fullName>ts2__Company_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>