Frankbelford/uatv1ba/force-app/main/default/objects/Account/fields/ts2__Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>ts2__Credit_Limit__c</fullName>
    <label>Credit Limit</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>