Frankbelford/uatv1ba/force-app/main/default/objects/Account/fields/ts2__EMC_Certs__c.field-meta.xml
<CustomField>
    <fullName>ts2__EMC_Certs__c</fullName>
    <inlineHelpText>These are fields that describe the account</inlineHelpText>
    <label>EMC Certs</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Awesome</fullName>
            </value>
            <value>
                <fullName>Special</fullName>
            </value>
            <value>
                <fullName>Enemy</fullName>
            </value>
            <value>
                <fullName>Friend</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>