Frankbelford/uatv1ba/force-app/main/default/objects/Account/fields/ts2__Invoice_Terms__c.field-meta.xml
<CustomField>
    <fullName>ts2__Invoice_Terms__c</fullName>
    <label>Invoice Terms</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Net 0</fullName>
            </value>
            <value>
                <fullName>Net 10</fullName>
            </value>
            <value>
                <fullName>Net 30</fullName>
            </value>
            <value>
                <fullName>Net 60</fullName>
            </value>
            <value>
                <fullName>Net 90</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>