Frankbelford/uatv1ba/force-app/main/default/objects/Account/fields/ts2__Legacy_AccountID__c.field-meta.xml
<CustomField>
    <fullName>ts2__Legacy_AccountID__c</fullName>
    <description>ID generated from another system.  This field is used for Data Migration.</description>
    <externalId>true</externalId>
    <inlineHelpText>ID generated from another system.  This field is used for Data Migration.</inlineHelpText>
    <label>Legacy AccountID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>