Frankbelford/uatv1ba/force-app/main/default/objects/Account/fields/ts2__Memo__c.field-meta.xml
<CustomField>
    <fullName>ts2__Memo__c</fullName>
    <label>Memo</label>
    <type>TextArea</type>
</CustomField>