Frankbelford/uatv1ba/force-app/main/default/objects/Account/fields/ts2__Requires_Background_Check__c.field-meta.xml
<CustomField>
    <fullName>ts2__Requires_Background_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires Background Check</label>
    <type>Checkbox</type>
</CustomField>