Frankbelford/uatv1ba/force-app/main/default/objects/Account/fields/ts2__Requires_Drug_Screen__c.field-meta.xml
<CustomField>
    <fullName>ts2__Requires_Drug_Screen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires Drug Screen</label>
    <type>Checkbox</type>
</CustomField>