Frankbelford/uatv1ba/force-app/main/default/objects/Account/fields/ts2__Sent_Contract__c.field-meta.xml
<CustomField>
    <fullName>ts2__Sent_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sent Contract</label>
    <type>Checkbox</type>
</CustomField>