Frankbelford/uatv1ba/force-app/main/default/objects/Account/fields/ts2__Sent_Literature__c.field-meta.xml
<CustomField>
    <fullName>ts2__Sent_Literature__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sent Literature</label>
    <type>Checkbox</type>
</CustomField>