Frankbelford/uatv1ba/force-app/main/default/objects/Account/fields/ts2__Skill_Codes__c.field-meta.xml
<CustomField>
    <fullName>ts2__Skill_Codes__c</fullName>
    <label>Skill Codes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>