Frankbelford/uatv1ba/force-app/main/default/objects/Account/fields/ts2__SLAExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>ts2__SLAExpirationDate__c</fullName>
    <label>SLA Expiration Date</label>
    <type>Date</type>
</CustomField>