Frankbelford/uatv1ba/force-app/main/default/objects/Account/fields/ts2__Source__c.field-meta.xml
<CustomField>
    <fullName>ts2__Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Resume Search</fullName>
            </value>
            <value>
                <fullName>Monster</fullName>
            </value>
            <value>
                <fullName>CareerBuilder</fullName>
            </value>
            <value>
                <fullName>Hot Jobs</fullName>
            </value>
            <value>
                <fullName>News Paper</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Cold-call</fullName>
            </value>
            <value>
                <fullName>Lead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>