Frankbelford/uatv1ba/force-app/main/default/objects/Account/fields/ts2__Source_Note__c.field-meta.xml
<CustomField>
    <fullName>ts2__Source_Note__c</fullName>
    <label>Source Note</label>
    <type>TextArea</type>
</CustomField>