Frankbelford/uatv1ba/force-app/main/default/objects/Account/fields/ts2__Stage__c.field-meta.xml
<CustomField>
    <fullName>ts2__Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Orders</fullName>
            </value>
            <value>
                <fullName>Applications</fullName>
            </value>
            <value>
                <fullName>Submittals</fullName>
            </value>
            <value>
                <fullName>Interviews</fullName>
            </value>
            <value>
                <fullName>Offers</fullName>
            </value>
            <value>
                <fullName>Placements</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>