Frankbelford/uatv1ba/force-app/main/default/objects/Account/fields/ts2__Students__c.field-meta.xml
<CustomField>
    <fullName>ts2__Students__c</fullName>
    <label>Students</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>