Frankbelford/uatv1ba/force-app/main/default/objects/Account/fields/Unit_ID__c.field-meta.xml
<CustomField>
    <fullName>Unit_ID__c</fullName>
    <description>Unit Id to populate</description>
    <label>Unit ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>