Frankbelford/uatv1ba/force-app/main/default/objects/Account/fields/Unit_ID_Required__c.field-meta.xml
<CustomField>
    <fullName>Unit_ID_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unit ID Required</label>
    <type>Checkbox</type>
</CustomField>