Frankbelford/uatv1ba/force-app/main/default/objects/Account/fields/VMS_Client__c.field-meta.xml
<CustomField>
    <fullName>VMS_Client__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VMS Client</label>
    <type>Checkbox</type>
</CustomField>