Frankbelford/uatv1ba/force-app/main/default/objects/Account/recordTypes/IP_2ndTierSupplier.recordType-meta.xml
<RecordType>
    <fullName>IP_2ndTierSupplier</fullName>
    <active>true</active>
    <label>2nd Tier Supplier</label>
</RecordType>