Frankbelford/uatv1ba/force-app/main/default/objects/Account/recordTypes/ts2__Candidate.recordType-meta.xml
<RecordType>
    <fullName>ts2__Candidate</fullName>
    <active>true</active>
    <description>An Account used to store Candidates</description>
    <label>Candidate</label>
</RecordType>