Frankbelford/uatv1ba/force-app/main/default/objects/Account/validationRules/BSC_Payrolled_Client.validationRule-meta.xml
<ValidationRule>
    <fullName>BSC_Payrolled_Client</fullName>
    <active>true</active>
    <description>BSC Payrolled Client can only be updated by users in the branch manager permission set</description>
    <errorConditionFormula>ISCHANGED(BSC_Payrolled_Client__c) &amp;&amp;
NOT($Permission.Branch_Managers)</errorConditionFormula>
    <errorDisplayField>BSC_Payrolled_Client__c</errorDisplayField>
    <errorMessage>BSC Payrolled Client can only be updated by managers</errorMessage>
</ValidationRule>