Frankbelford/uatv1ba/force-app/main/default/objects/Account/validationRules/Business_Incoporation_No_Account.validationRule-meta.xml
<ValidationRule>
    <fullName>Business_Incoporation_No_Account</fullName>
    <active>false</active>
    <errorConditionFormula>if(IP_BusinessIncorporationNumber__c!=null,NOT(REGEX(IP_BusinessIncorporationNumber__c,&quot;[0-9]{8}|[a-zA-Z]{2}[0-9]{6}&quot;)),false)</errorConditionFormula>
    <errorDisplayField>IP_BusinessIncorporationNumber__c</errorDisplayField>
    <errorMessage>Business Incorporation Number format is : 8 numeric or 2 alpha and 6 numeric</errorMessage>
</ValidationRule>