Frankbelford/uatv1ba/force-app/main/default/objects/Account/validationRules/Candidate_account_editing.validationRule-meta.xml
<ValidationRule>
    <fullName>Candidate_account_editing</fullName>
    <active>true</active>
    <errorConditionFormula>(RecordType.Name ==&quot;Candidate&quot; &amp;&amp; ISCHANGED(Name) &amp;&amp; $Profile.Name &lt;&gt; &apos;System Administrator&apos;)</errorConditionFormula>
    <errorMessage>Only Administrators can rename this Account</errorMessage>
</ValidationRule>