Frankbelford/uatv1ba/force-app/main/default/objects/Account/validationRules/Company_Reg_No_Account.validationRule-meta.xml
<ValidationRule>
    <fullName>Company_Reg_No_Account</fullName>
    <active>false</active>
    <errorConditionFormula>if(IP_CompanyRegistrationNo__c!=null,NOT(REGEX(IP_CompanyRegistrationNo__c,&quot;[0-9]{8}|[a-zA-Z]{2}[0-9]{6}&quot;)),false)</errorConditionFormula>
    <errorDisplayField>IP_CompanyRegistrationNo__c</errorDisplayField>
    <errorMessage>Company Registration no format is : 8 numeric or 2 alpha and 6 numeric</errorMessage>
</ValidationRule>