Frankbelford/uatv1ba/force-app/main/default/objects/Account/validationRules/Five_Line_WTR.validationRule-meta.xml
<ValidationRule>
    <fullName>Five_Line_WTR</fullName>
    <active>true</active>
    <errorConditionFormula>AND( OR( NOT( ISBLANK( IP_PreAWRWTRValue__c ) ),NOT( ISBLANK(  IP_PostAWRWTRValue__c  ) ) ),(TEXT( IP_InvoicingMethod__c )=&quot;Standard&quot;))</errorConditionFormula>
    <errorMessage>&apos;Pre and Post WTR Percentage&apos; fields can only be entered if the &apos;Invoice Type&apos; is set up as &apos;Hourly Commission&apos; or &apos;Hourly Percentage&apos;.</errorMessage>
</ValidationRule>