Frankbelford/uatv1ba/force-app/main/default/objects/Account/validationRules/H_and_S_Contract_fields_Branch_manager.validationRule-meta.xml
<ValidationRule>
    <fullName>H_and_S_Contract_fields_Branch_manager</fullName>
    <active>true</active>
    <description>Only branch managers can update centrally managed H&amp;S contracts</description>
    <errorConditionFormula>AND(
    OR(
        ISCHANGED(Central_H_S_Contract__c),
        ISCHANGED(Contracts_managed_by__c)
    ),
    NOT($Permission.Branch_Managers)
)</errorConditionFormula>
    <errorMessage>Central H&amp;S Contract or Contracts managed by can only be updated by managers</errorMessage>
</ValidationRule>