Frankbelford/uatv1ba/force-app/main/default/objects/Account/validationRules/Post_Code_validation_Billing.validationRule-meta.xml
<ValidationRule>
    <fullName>Post_Code_validation_Billing</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(
OR(
ISBLANK(BillingPostalCode),  
REGEX( BillingPostalCode , &quot;[a-zA-Z]\\d\\s{0,1}\\d[a-zA-Z]{2}&quot;),
REGEX( BillingPostalCode , &quot;[a-zA-Z]\\d\\d\\s{0,1}\\d[a-zA-Z]{2}&quot;),
REGEX( BillingPostalCode , &quot;[a-zA-Z]{2}\\d\\s{0,1}\\d[a-zA-Z]{2}&quot;),
REGEX( BillingPostalCode , &quot;[a-zA-Z]{2}\\d\\d\\s{0,1}\\d[a-zA-Z]{2}&quot;),
REGEX( BillingPostalCode , &quot;[a-zA-Z]{2}\\d[a-zA-Z]\\s{0,1}\\d[a-zA-Z]{2}&quot;),
REGEX( BillingPostalCode , &quot;[a-zA-Z]\\d[a-zA-Z]\\s{0,1}\\d[a-zA-Z]{2}&quot;)
)
)</errorConditionFormula>
    <errorDisplayField>BillingPostalCode</errorDisplayField>
    <errorMessage>Post Code is not a valid UK format</errorMessage>
</ValidationRule>