Frankbelford/uatv1ba/force-app/main/default/objects/Account/validationRules/Unit_ID_or_Purchase_Order.validationRule-meta.xml
<ValidationRule>
    <fullName>Unit_ID_or_Purchase_Order</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
				 Unit_ID_Required__c = TRUE,
				 Purchase_Order_Required__c = TRUE)</errorConditionFormula>
    <errorMessage>Unit ID and Purchase Order cannot both be ticked as required</errorMessage>
</ValidationRule>