Frankbelford/uatv1ba/force-app/main/default/objects/Account/validationRules/Validation_Format_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_Format_Check</fullName>
    <active>false</active>
    <errorConditionFormula>IF( 
NOT(ISBLANK(Invoice_PO_Number_Format__c)), 
AND( 
NOT(REGEX(Invoice_PO_Number_Format__c, &quot;[!Aa#]+&quot;)) 
),False 
)</errorConditionFormula>
    <errorMessage>Only A,a,# or ! allowed in Validation Format</errorMessage>
</ValidationRule>