Frankbelford/uatv1ba/force-app/main/default/objects/Account/listViews/Additional_Compliance.listView-meta.xml
<ListView>
    <fullName>Additional_Compliance</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Additional_Compliance__c</field>
        <operation>equals</operation>
        <value>Proof of Address</value>
    </filters>
    <label>Additional Compliance</label>
    <sharedTo>
        <role>Blue_Arrow_Stevenage</role>
    </sharedTo>
</ListView>