Frankbelford/uatv1ba/force-app/main/default/objects/Account/listViews/APRIL_Business_Companies.listView-meta.xml
<ListView>
    <fullName>APRIL_Business_Companies</fullName>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.LAST_ACTIVITY</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.EMPLOYEES</columns>
    <columns>ACCOUNT.INDUSTRY</columns>
    <columns>Brand__c</columns>
    <columns>ts2__Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Account,Account.Client</value>
    </filters>
    <filters>
        <field>Brand__c</field>
        <operation>equals</operation>
        <value>blue arrow</value>
    </filters>
    <filters>
        <field>CORE.USERS.FIRST_NAME</field>
        <operation>equals</operation>
        <value>April</value>
    </filters>
    <label>APRIL Business Companies</label>
</ListView>