Frankbelford/uatv1ba/force-app/main/default/objects/Account/listViews/Bens_Accounts.listView-meta.xml
<ListView>
    <fullName>Bens_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>Bwins</value>
    </filters>
    <label>Bens Accounts</label>
</ListView>