Frankbelford/uatv1ba/force-app/main/default/objects/Account/listViews/Cardiff_1080_accounts.listView-meta.xml
<ListView>
    <fullName>Cardiff_1080_accounts</fullName>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.LAST_ACTIVITY</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.EMPLOYEES</columns>
    <columns>ACCOUNT.INDUSTRY</columns>
    <filterScope>Mine</filterScope>
    <label>Cardiff 1080 accounts</label>
</ListView>