Frankbelford/uatv1ba/force-app/main/default/objects/Account/listViews/Client_Companies.listView-meta.xml
<ListView>
    <fullName>Client_Companies</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Account</value>
    </filters>
    <filters>
        <field>IP_SupplierReference__c</field>
        <operation>equals</operation>
        <value>brentwood</value>
    </filters>
    <label>Client Companies</label>
</ListView>