Frankbelford/uatv1ba/force-app/main/default/objects/Account/listViews/Copy_of_Newbury_Accounts.listView-meta.xml
<ListView>
    <fullName>Copy_of_Newbury_Accounts</fullName>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.LAST_ACTIVITY</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.EMPLOYEES</columns>
    <columns>ACCOUNT.INDUSTRY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Account,Account.Client</value>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>ngoul,lking,cpeat. sbick,aquil,mcorn</value>
    </filters>
    <label>Swindon  Accounts</label>
    <sharedTo>
        <role>Blue_Arrow_Swindon</role>
    </sharedTo>
</ListView>