Frankbelford/uatv1ba/force-app/main/default/objects/Account/listViews/Copy_of_Newbury_kate_Top_Prospects.listView-meta.xml
<ListView>
    <fullName>Copy_of_Newbury_kate_Top_Prospects</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>ts2__Company_Status__c</columns>
    <columns>ACCOUNT.LAST_ACTIVITY</columns>
    <columns>Check_Top_Prospect__c</columns>
    <columns>Estimated_Perm_Vacancies__c</columns>
    <columns>Estimated_Temp_Requirements__c</columns>
    <columns>National_Competitor__c</columns>
    <columns>ts2__Stage__c</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>kalex</value>
    </filters>
    <filters>
        <field>Top_Prospect__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Copy of Newbury - kate -Top Prospects</label>
    <sharedTo>
        <role>Blue_Arrow_Newbury_Temps</role>
    </sharedTo>
</ListView>