Frankbelford/uatv1ba/force-app/main/default/objects/Account/listViews/Dawn_Clients.listView-meta.xml
<ListView>
    <fullName>Dawn_Clients</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>ddavi</value>
    </filters>
    <label>Dawn Clients</label>
</ListView>