Frankbelford/uatv1ba/force-app/main/default/objects/Account/listViews/Derby_clients_2022.listView-meta.xml
<ListView>
    <fullName>Derby_clients_2022</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Last_Timesheet__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>nadki</value>
    </filters>
    <filters>
        <field>Last_Timesheet__c</field>
        <operation>greaterThan</operation>
        <value>1/1/2022 12:00 AM</value>
    </filters>
    <label>Derby clients 2022</label>
</ListView>