Frankbelford/uatv1ba/force-app/main/default/objects/Account/listViews/Eastbourne_office_inactive.listView-meta.xml
<ListView>
    <fullName>Eastbourne_office_inactive</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>IP_Business_Type__c</columns>
    <columns>ts2__Company_Status__c</columns>
    <columns>ACCOUNT.LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>mchal,cwarn,lglov,fbenn,ewill,tshab,swell,oting</value>
    </filters>
    <label>Eastbourne office inactive</label>
</ListView>