Frankbelford/uatv1ba/force-app/main/default/objects/Account/listViews/Eve_Millman_s_Accounts.listView-meta.xml
<ListView>
    <fullName>Eve_Millman_s_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <label>Eve Millman&apos;s Accounts</label>
    <sharedTo>
        <roleAndSubordinatesInternal>Tate_Service_Delivery_Centre</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>