Frankbelford/uatv1ba/force-app/main/default/objects/Account/listViews/James_Transport_Accounts.listView-meta.xml
<ListView>
    <fullName>James_Transport_Accounts</fullName>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.LAST_ACTIVITY</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.EMPLOYEES</columns>
    <columns>ACCOUNT.INDUSTRY</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Account,Account.Client</value>
    </filters>
    <filters>
        <field>IP_Business_Type__c</field>
        <operation>equals</operation>
        <value>Catering,Driving,Manufacturing,Retail,Warehouse</value>
    </filters>
    <label>James Transport Accounts</label>
    <sharedTo>
        <role>Blue_Arrow_Newbury_Perm_hub</role>
        <role>Blue_Arrow_Newbury_Temps</role>
    </sharedTo>
</ListView>